Avoid endless loop when database setup is broken (CollectionManager would create new DatabaseAccess objects, the constructor  would again call CollectionManager)

BUG: 165318

svn path=/trunk/extragear/graphics/digikam/; revision=826364